--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   supabase_flutter: ^2.9.0
   google_sign_in: ^6.3.0
   flutter_dotenv: ^5.2.1
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
+  either_dart: ^1.0.0
+  go_router: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
+    - assets/images/google_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
