product list implemented with filter and search

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,3 +47,16 @@
 	<true/>
 </dict>
 </plist>
+<key>CFBundleURLTypes</key>
+<array>
+ <dict>
+   <key>CFBundleTypeRole</key>
+   <string>Editor</string>
+   <key>CFBundleURLSchemes</key>
+   <array>
+     <string>com.example.bookstore_app</string>
+   </array>
+ </dict>
+</array>
+<key>FlutterDeepLinkingEnabled</key>
+<true/>
