--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   either_dart: ^1.0.0
   go_router: ^15.1.3
+  hydrated_bloc: ^10.0.0
+  path_provider: ^2.1.5
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
