--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
   bloc: ^9.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
