--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path_provider: ^2.1.5
   bloc: ^9.0.0
   intl: ^0.20.2
+  url_launcher: ^6.3.1
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,7 @@ flutter:
   assets:
     - .env
     - assets/images/google_logo.png
+    - assets/lottie/order_success.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
